--- a/vs2017test/vs2017test.vcxproj
+++ b/vs2017test/vs2017test.vcxproj
@@ -137,6 +137,7 @@
   </ItemGroup>
   <ItemGroup>
     <Text Include="info.txt" />
+    <Text Include="stuck.txt" />
     <Text Include="times.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
